Added basic views and redirect paths

--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@entry) do |f| %>
-  <%= f.input :content, as: :rich_text_area %>
-  <%= f.button :submit %>
-<% end %>
+<%= render "form", entry: @entry %>
+<%= link_to 'Go back', entry_path(@entry) %>
+<br>
+<%= link_to 'Go back to home page', root_path  %>
