--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>CULTIVATE Home page</h1>
+
+<%= link_to 'Create a new entry', new_entry_path %>
+<br>
+<%= link_to 'See all my entries', entries_path %>
