Removed the title column and created the link for the guided entry

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,4 +2,6 @@
 
 <%= link_to 'Create a new entry', new_entry_path %>
 <br>
+<%= link_to 'Create a guided entry', new_guided_entry_path  %>
+<br>
 <%= link_to 'See all my entries', entries_path %>
