small style adjustments to the new entry form to make sure the trix toolbar is responsive

--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for(entry) do |f| %>
-  <%= f.input :content, as: :rich_text_area %>
+  <%= f.input :content, as: :rich_text_area, placeholder: "What are you grateful about today?", label: false %>
   <%= f.button :submit %>
 <% end %>
