--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,2 +1,5 @@
-<%= render "form", entry: @entry %>
-<%= link_to 'Go back to home page', root_path  %>
+<div class="container">
+  <%= render "form", entry: @entry %>
+  <%= link_to 'Go back to home page', root_path  %>
+</div>
+
