--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for(entry) do |f| %>
   <%= f.input :content, as: :rich_text_area %>
+  <%= f.input :mood, as: :hidden, input_html: { value: @mood } %>
   <%= f.button :submit %>
 <% end %>
