added back styling structure, added home page elements, mood table

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,11 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+
+// Cutivate colors:
+$light-green: #C6DEC2;
+$dark-green: #3F6E43;
+$light-gray:#EDEDED;
+$dark-gray: #25282B;
+$white: #FFFFFF
