--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,6 @@
 // Specific CSS for your home-page
+body {
+  text-align: center;
+  // background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dp6jmvq0j/image/upload/v1622124068/trees_vertical_bluoff.jpg);
+  // background-color: $light-green;
+}
