--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,23 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: transparent;
+  padding-left: 20px;
+  text-align: center;
+  margin-right: 0;
 }
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.navbar-lewagon .navbar-brand {
+  letter-spacing: 4px;
+  color: $light-gray;
+  &:hover {
+    color: $light-gray;
+  }
+}
+
+.navbar-brand {
+  margin-right: 0;
 }
