--- a/app/views/shared/_navbar_temp.html.erb
+++ b/app/views/shared/_navbar_temp.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
 
   <%= link_to "#", class: "navbar-brand" do %>
-    <h4><i class="fas fa-plus-square"></i></h4>
+    <h4><i class="far fa-plus-square"></i></h4>
     <%#= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
     <% end %>
 
@@ -14,6 +14,7 @@
     <h4><i class="fas fa-user"></i></h4>
     <%#= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
     <% end %>
+
 
 
 
