--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,3 +5,5 @@
 <%= link_to 'Create a guided entry', new_guided_entry_path  %>
 <br>
 <%= link_to 'See all my entries', entries_path %>
+<br>
+<%= link_to 'See my communities', communities_path %>
