--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,31 +1,24 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-cultivate">
 
-  <%= link_to "#", class: "navbar-brand" do %>
+  <%= link_to new_entry_path, class: "navbar-brand" do %>
     <h4><i class="fas fa-plus-square"></i></h4>
     <%#= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
     <% end %>
 
-  <%= link_to "#", class: "navbar-brand" do %>
+  <%= link_to root_path, class: "navbar-brand" do %>
     <h4 class="navbar-brand">Cultivate</h4>
     <%#= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
     <% end %>
 
-  <%= link_to "#", class: "nav-item dropdown" do %>
-    <h4><i class="fas fa-user"></i></h4>
-    <%#= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-    <% end %>
-
-
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+  <div class="navbar" id="navbarSupportedContent">
+    <ul class="navbar-nav no-static mr-auto">
       <% if user_signed_in? %>
 
         <li class="nav-item dropdown">
-          <h3><i class="fas fa-user"></i></h3>
+          <i class="fas fa-user" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Action", "#", class: "dropdown-item" %>
-            <%= link_to "Another action", "#", class: "dropdown-item" %>
+            <%= link_to "View Entries", entries_path, class: "dropdown-item" %>
+            <%#= link_to "Settings", "#", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
