implemented mood form and adjusted style

--- a/app/assets/stylesheets/components/_emoji.scss
+++ b/app/assets/stylesheets/components/_emoji.scss
@@ -1,8 +1,8 @@
-.emoji {
-  font-size: 60px;
-  color: $light-gray;
-  padding: 8px 8px;
-  &:active {
-    color: $dark-green
-  }
-}
+// .emoji {
+//   font-size: 60px;
+//   color: $light-gray;
+//   padding: 8px 8px;
+//   // &:active {
+//   //   color: $dark-green;
+//   // }
+// }
