added background color to trix buttons and fixed emoji css file form before

--- a/app/assets/stylesheets/components/_actiontext.scss
+++ b/app/assets/stylesheets/components/_actiontext.scss
@@ -85,4 +85,5 @@ trix-editor.form-control {
   height: 32px !important;
   flex-grow: 1 !important;
   padding: 16px !important;
+  background-color: $light-gray !important;
 }
