adapted existing canvas javascript to fit our app

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,9 +2,11 @@
 @import "actiontext";
 @import "alert";
 @import "avatar";
-@import "navbar";
 @import "button";
-@import "overlay";
+@import "doodle";
 @import "emoji";
 @import "form";
+@import "navbar";
+@import "overlay";
+
 
