--- a/app/views/pages/menu.html.erb
+++ b/app/views/pages/menu.html.erb
@@ -4,7 +4,7 @@
   <div class="menu_container">
   <%= link_to "Guide Me", new_guided_entry_path, class: 'button-lg' %>
   <%= link_to "Write", new_entry_path, class: 'button-lg' %>
-  <%= link_to "Doodle", new_entry_path, class: 'button-lg' %>
+  <%= link_to "Doodle", doodle_path, class: 'button-lg' %>
   <%= link_to "My Tribe", new_entry_path, class: 'button-lg' %>
   </div>
 
