--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,14 +1,16 @@
 <h1>My Entries</h1>
 
 <% @entries.each do |entry| %>
-  <hr>
-  <%= link_to entry_path(entry) do %>
-    <%= current_user %>
-    <%= entry.updated_at %>
-    <%= entry.content %>
-    <%= link_to 'Delete entry', entry_path(entry), method: :delete, data: { confirm: "Are you sure?" } %>
-  <% end %>
-  <br>
-  <hr>
+  <div class="card_entry">
+    <hr>
+    <%= link_to entry_path(entry) do %>
+      <%#= current_user %>
+      <h4><%= entry.updated_at %></h4>
+      <p><%= entry.content %></p>
+      <%= link_to 'Delete entry', entry_path(entry), method: :delete, data: { confirm: "Are you sure?" } %>
+    <% end %>
+    <br>
+    <hr>
+  </div>
 <% end %>
 <%= link_to 'Go back to home page', root_path  %>
