changed tribe to community per our standup this am

--- a/app/views/pages/menu.html.erb
+++ b/app/views/pages/menu.html.erb
@@ -5,7 +5,7 @@
   <%= link_to "Guide Me", new_guided_entry_path, class: 'button-lg' %>
   <%= link_to "Write", new_entry_path, class: 'button-lg' %>
   <%= link_to "Doodle", new_entry_path, class: 'button-lg' %>
-  <%= link_to "My Tribe", new_entry_path, class: 'button-lg' %>
+  <%= link_to "Community", new_entry_path, class: 'button-lg' %>
   </div>
 
 </div>
