--- a/app/views/youtubes/_thumbnail.html.erb
+++ b/app/views/youtubes/_thumbnail.html.erb
@@ -1,3 +1,3 @@
 <div>
-  <%= image_tag youtube.thumbnail_url, style: "max-width:400px" %>
+  <%= image_tag youtube.thumbnail_url, style: "max-width: 85%" %>
 </div>
