--- a/app/views/pages/doodle.html.erb
+++ b/app/views/pages/doodle.html.erb
@@ -1,7 +1,10 @@
-<canvas id="canvas"></canvas>
-
-<div id="restore-canvas" class="btn btn-light m-3">Undo</div>
-<div id="clear-canvas" class="btn btn-light m-3">Clear</div>
+<canvas id="canvas" class="mb-3"></canvas>
 <br>
 <input id="colors-canvas" type="color" placeholder="Colors">
 <input id="width-canvas" type="range" min="1" max="100">
+<br>
+<div id="doodle-options" class="mt-3">
+  <div id="restore-canvas" class="btn btn-light m-3">Undo</div>
+  <div id="clear-canvas" class="btn btn-light m-3">Clear</div>
+  <a id="save-doodle" download="doodle.jpg" href="" class="btn btn-success m-3">Save</a>
+</div>
