--- a/app/views/pages/doodle.html.erb
+++ b/app/views/pages/doodle.html.erb
@@ -6,5 +6,5 @@
 <div id="doodle-options" class="mt-3">
   <div id="restore-canvas" class="btn btn-light m-3">Undo</div>
   <div id="clear-canvas" class="btn btn-light m-3">Clear</div>
-  <a id="save-doodle" download="doodle.jpg" href="" class="btn btn-success m-3">Save</a>
+  <a id="save-doodle" download="doodle.jpg" href="" class="button-sm m-3">Save</a>
 </div>
