--- a/app/assets/stylesheets/components/_card_entry.scss
+++ b/app/assets/stylesheets/components/_card_entry.scss
@@ -1,13 +1,24 @@
 .card_entry {
   background-color: $light-gray;
-  max-height: 320px;
+  // max-height: 320px;
   width: 340px;
-  padding: 16px 16px;
-  margin: 0 auto;
+  padding: 12px 16px;
+  margin: 16px auto;
+  text-overflow: hidden;
   text-align: left;
   text-decoration: none;
   border-radius: 8px;
     a {
       color: $dark-gray !important;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+    hr {
+      margin-top: 0;
+    }
+    small {
+      padding-top: 4px;
     }
 }
+
