add basic card to the entries index

--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,8 +1,10 @@
-<p><%= current_user %></p>
-<h3>Updated at:</h3>
-<p><%= @entry.updated_at %></p>
-<h3>Content:</h3>
-<p><%= @entry.content %></p>
+<div class="card_entry_show">
+  <p><%#= current_user %></p>
+  <h4>Updated at:</h4>
+  <p><%= @entry.updated_at %></p>
+  <h4>Content:</h4>
+  <p><%= @entry.content %></p>
+</div>
 <%= link_to 'Edit entry', edit_entry_path(@entry) %>
 <br>
 <%= link_to 'Go back to entries', entries_path %>
