--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,9 +1,24 @@
 <h1>My Entries</h1>
-  <% @entries.each do |entry| %>
+  <% @entries.reverse.each do |entry| %>
     <div class="card_entry">
       <%= link_to entry_path(entry) do %>
         <%#= current_user %>
-        <h4><%= entry.updated_at.month %>-<%= entry.updated_at.day %>-<%= entry.updated_at.year %></h4>
+        <div class="entry-title">
+          <h4><%= entry.updated_at.strftime("%b %d, %Y") %></h4>
+          <% if entry.mood == 1%>
+            <i class="fas fa-meh emoji emoji-entry"></i>
+          <% elsif entry.mood == 2 %>
+            <i class="fas fa-smile emoji emoji-entry"></i>
+          <% elsif entry.mood == 3 %>
+            <i class="fas fa-angry emoji emoji-entry"></i>
+          <% elsif entry.mood == 4 %>
+            <i class="fas fa-frown emoji emoji-entry"></i>
+          <% elsif entry.mood == 5 %>
+            <i class="fas fa-sad-tear emoji emoji-entry"></i>
+          <% elsif entry.mood == 6 %>
+            <i class="fas fa-tired emoji emoji-entry"></i>
+          <% end %>
+        </div>
         <hr>
         <small><%= entry.content %></small>
         <%#= link_to 'Delete entry', entry_path(entry), method: :delete, data: { confirm: "Are you sure?" } %>
