--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 
   <!-- Greeting -->
-  <h1 class="my-5">Hello, Jenny.</h1>
+  <h1 class="my-5">Hello, <%= @user.first_name %>.</h1>
   <h5 class="my-3">How are you feeling today?</h5>
 
   <!-- Emojis -->
