Changed the path on the Communities button

--- a/app/views/pages/menu.html.erb
+++ b/app/views/pages/menu.html.erb
@@ -1,12 +1,9 @@
 <div class="container">
-
   <!--Navigate your path-->
   <div class="menu_container">
   <%= link_to "Guide Me", new_guided_entry_path, class: 'button-lg' %>
   <%= link_to "Write", new_entry_path, class: 'button-lg' %>
-  <%= link_to "Community", new_entry_path, class: 'button-lg' %>
+  <%= link_to "Communities", communities_path, class: 'button-lg' %>
   <%= link_to "Doodle", doodle_path, class: 'button-lg' %>
-
   </div>
-
 </div>
