--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,7 +1,7 @@
 .button-lg {
   // width:170px;
   width:170px;
-  height: 60px;
+  // height: 60px;
   background-color: $dark-green;
   padding: 16px 32px;
   color: $light-gray;
@@ -14,7 +14,7 @@
 
 .button-sm {
   width: 110px;
-  height: 55px;
+  // height: 55px;
   background-color: $dark-green;
   padding: 8px 16px;
   color: $light-gray;
