--- a/app/views/guided/entries/new.html.erb
+++ b/app/views/guided/entries/new.html.erb
@@ -1,33 +1,48 @@
-<%= simple_form_for :guided_entry_builder, url: guided_entries_path do |f| %>
-  <div id="first-question">
-    <%= f.fields_for :answer_1 do |fa| %>
-      <%= fa.input :content, label: "#{@questions[0].content}" %>
-      <%= fa.input :question_id, as: :hidden, input_html: { value: @questions[0].id } %>
+<div class="container">
+  <div class="card_guided_entry">
+    <%= simple_form_for :guided_entry_builder, url: guided_entries_path do |f| %>
+      <div id="first-question">
+        <%= f.fields_for :answer_1 do |fa| %>
+
+          <h5><%= fa.input :content, label: "#{@questions[0].content}" %></h5>
+          <%= fa.input :question_id, as: :hidden, input_html: { value: @questions[0].id } %>
+        <% end %>
+        <br>
+        <div id="next-1" class="btn button-sm">Next</div>
+        <br>
+        <br>
+        <i class="fas fa-circle"></i>
+        <i class="far fa-circle"></i>
+        <i class="far fa-circle"></i>
+      </div>
+      <div id="second-question" class="d-none">
+        <%= f.fields_for :answer_2 do |fa| %>
+          <h5><%= fa.input :content, label: "#{@questions[1].content}" %></h5>
+          <%= fa.input :question_id, as: :hidden, input_html: { value: @questions[1].id } %>
+        <% end %>
+        <br>
+        <div id="next-2" class="btn button-sm">Next</div>
+        <br>
+        <br>
+        <i class="far fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="far fa-circle"></i>
+      </div>
+      <div id="third-question" class="d-none">
+        <%= f.fields_for :answer_3 do |fa| %>
+          <h5><%= fa.input :content, label: "#{@questions[2].content}" %></h5>
+          <%= fa.input :question_id, as: :hidden, input_html: { value: @questions[2].id } %>
+        <% end %>
+        <br>
+        <%= f.button :submit, "Next", class: "btn button-sm" %>
+        <br>
+        <br>
+        <i class="far fa-circle"></i>
+        <i class="far fa-circle"></i>
+        <i class="fas fa-circle"></i>
+      </div>
     <% end %>
-    <div id="next-1" class="btn btn-primary">Next</div>
-    <i class="fas fa-circle"></i>
-    <i class="far fa-circle"></i>
-    <i class="far fa-circle"></i>
   </div>
-  <div id="second-question" class="d-none">
-    <%= f.fields_for :answer_2 do |fa| %>
-      <%= fa.input :content, label: "#{@questions[1].content}" %>
-      <%= fa.input :question_id, as: :hidden, input_html: { value: @questions[1].id } %>
-    <% end %>
-    <div id="next-2" class="btn btn-primary">Next</div>
-    <i class="far fa-circle"></i>
-    <i class="fas fa-circle"></i>
-    <i class="far fa-circle"></i>
-  </div>
-  <div id="third-question" class="d-none">
-    <%= f.fields_for :answer_3 do |fa| %>
-      <%= fa.input :content, label: "#{@questions[2].content}" %>
-      <%= fa.input :question_id, as: :hidden, input_html: { value: @questions[2].id } %>
-    <% end %>
-    <%= f.button :submit, "Next", class: "btn btn-primary" %>
-    <i class="far fa-circle"></i>
-    <i class="far fa-circle"></i>
-    <i class="fas fa-circle"></i>
-  </div>
-<% end %>
+</div>
+<br>
 <%= link_to 'Go back to home page', root_path  %>
