change cultivate link to menu path

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
     <%#= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
     <% end %>
 
-  <%= link_to root_path, class: "navbar-brand" do %>
+  <%= link_to menu_path, class: "navbar-brand" do %>
     <h4 class="navbar-brand">Cultivate</h4>
     <%#= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
     <% end %>
