added dark gray color to embed message

--- a/app/assets/stylesheets/components/_actiontext.scss
+++ b/app/assets/stylesheets/components/_actiontext.scss
@@ -87,3 +87,7 @@ trix-editor.form-control {
   padding: 16px !important;
   background-color: $light-gray !important;
 }
+
+.link_to_embed {
+  color: $dark-gray;
+}
