rearranged margins around link input and embed messages, and changed embed button text to embed

--- a/app/assets/stylesheets/components/_actiontext.scss
+++ b/app/assets/stylesheets/components/_actiontext.scss
@@ -91,3 +91,7 @@ trix-editor.form-control {
 .link_to_embed {
   color: $dark-gray;
 }
+
+trix-toolbar .trix-input--dialog {
+  margin: 0 !important;
+}
