--- a/app/assets/stylesheets/components/_actiontext.scss
+++ b/app/assets/stylesheets/components/_actiontext.scss
@@ -42,7 +42,7 @@ trix-editor.form-control {
 
 .trix-button-group--history-tools, .trix-button--icon-italic, .trix-button--icon-strike,
 .trix-button--icon-quote, .trix-button--icon-code, .trix-button--icon-decrease-nesting-level,
-.trix-button--icon-increase-nesting-level, .trix-button--dialog {
+.trix-button--icon-increase-nesting-level, .trix-button--dialog:last-child {
   display: none !important;
 }
 
@@ -90,8 +90,4 @@ trix-editor.form-control {
 
 .link_to_embed {
   color: $dark-gray;
-}
-
-trix-toolbar .trix-input--dialog {
-  margin: 0 !important;
 }
