Edited the community model and controller strong params to prepare for the nested form

--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -1,2 +1,2 @@
 <%= render "form", community: @community %>
-<%= link_to 'Go back to home page', root_path  %>
+<%= link_to 'Go back', communities_path  %>
