minor changes to margins, navbar spacing. Buttons added where there was previously text links.

--- a/app/assets/stylesheets/components/_doodle.scss
+++ b/app/assets/stylesheets/components/_doodle.scss
@@ -1,5 +1,8 @@
 #canvas {
- border: 1px solid black;
+ // border: 1px solid black;
+ border-radius: 4px;
+ // width: 340px;
+ // height: 420px;
 }
 
 .stroke-color {
@@ -7,3 +10,4 @@
   width: 30px;
   height: 30px;
 }
+
