--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -6,9 +6,17 @@
   padding: 16px 32px;
   color: $light-gray;
   border-radius: 4px;
+  border: 3px solid $dark-green;
+  transition: background-color .3s;
   &:hover {
     color: $light-gray;
     text-decoration: none;
+  }
+  &:active {
+    color: $light-gray;
+    text-decoration: none;
+    border: 3px solid $dark-green;
+    background-color: transparent;
   }
 }
 
