--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
   <%= render "form", entry: @entry %>
-  <%= link_to 'Go back to home page', root_path %>
+  <%= link_to 'Back', menu_path, class: 'button-sm' %>
 </div>
 
