--- a/app/views/pages/doodle.html.erb
+++ b/app/views/pages/doodle.html.erb
@@ -1,10 +1,12 @@
+
 <canvas id="canvas" class="mb-3"></canvas>
 <br>
 <input id="colors-canvas" type="color" placeholder="Colors">
 <input id="width-canvas" type="range" min="1" max="100">
 <br>
-<div id="doodle-options" class="mt-3">
-  <div id="restore-canvas" class="btn btn-light m-3">Undo</div>
-  <div id="clear-canvas" class="btn btn-light m-3">Clear</div>
-  <a id="save-doodle" download="doodle.jpg" href="" class="button-sm m-3">Save</a>
+<div id="doodle-options" class="mt-4">
+  <%= link_to 'Back', menu_path, class: 'button-sm m-2' %>
+  <div id="restore-canvas" class="btn btn-light m-2">Undo</div>
+  <div id="clear-canvas" class="btn btn-light m-2">Clear</div>
+  <a id="save-doodle" download="doodle.jpg" href="" class="button-sm m-2">Save</a>
 </div>
