--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-cultivate">
 
   <%= link_to new_entry_path, class: "navbar-brand" do %>
-    <h4><i class="fas fa-plus-square"></i></h4>
+    <i class="fas fa-plus-square" class="plus-icon"></i>
     <%#= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
     <% end %>
 
