--- a/app/views/communities/_community_member_fields.html.erb
+++ b/app/views/communities/_community_member_fields.html.erb
@@ -1,4 +1,4 @@
 <div class="nested-fields">
-    <%= f.association :user %>
+    <%= f.input :user_id, collection: @non_owner_users %>
     <%= link_to_remove_association "Remove Member", f %>
 </div>
