--- a/app/views/communities/_form.html.erb
+++ b/app/views/communities/_form.html.erb
@@ -2,12 +2,12 @@
   <%= simple_form_for(@community) do |f| %>
     <%= f.input :name %>
     <h3>Users</h3>
-    <div id="community_members">
-      <%= f.simple_fields_for :community_members do |fa| %>
-        <%= render 'community_member_fields', f: fa %>
+    <div id="community_requests">
+      <%= f.simple_fields_for :community_requests do |fa| %>
+        <%= render 'community_request_fields', f: fa %>
       <% end %>
       <div class="link">
-        <%= link_to_add_association "Add Member", f, :community_members %>
+        <%= link_to_add_association "Add Member", f, :community_requests %>
       </div>
     </div>
     <%= f.button :submit, class:'btn btn-primary' %>
