--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -3,5 +3,9 @@
     <span><%= message.user.nickname %></span>
     <small><%= message.created_at.strftime("%a %b %e at %l:%M%p") %></small>
   </i>
-  <p><%= message.content %></p>
+  <% if message.content %>
+    <p><%= message.content %></p>
+  <% elsif message.actiontext_content %>
+    <p><%= message.actiontext_content %></p>
+  <% end %>
 </div>
