--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -33,3 +33,28 @@
     color: $light-gray
   }
 }
+
+
+
+.button-sq {
+  font-size: 52px;
+  background-color: $dark-green;
+  // padding: 24px 24px;
+  width: 112px;
+  height: 112px;
+  text-align: center; line-height: 112px;
+  color: $light-gray;
+  border-radius: 8px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  border: 3px solid $dark-green;
+  &:hover {
+    color: $light-gray
+  }
+  &:active {
+    color: $light-gray;
+    text-decoration: none;
+    border: 3px solid $dark-green;
+    background-color: transparent;
+  }
+}
