--- a/app/views/pages/menu.html.erb
+++ b/app/views/pages/menu.html.erb
@@ -7,10 +7,46 @@
     <% end %>
   </div> -->
 
-  <div class="menu_container">
+  <!-- word nav buttons -->
+<!--   <div class="menu_container">
     <%= link_to "Guide Me", new_guided_entry_path, class: 'button-lg' %>
     <%= link_to "Write", new_entry_path, class: 'button-lg' %>
     <%= link_to "Communities", communities_path, class: 'button-lg' %>
     <%= link_to "Doodle", doodle_path, class: 'button-lg' %>
+  </div> -->
+  <!-- icon nav buttons -->
+  <h2 class="my-4">Choose to Express</h2>
+  <div class="menu_icon_container">
+    <%= link_to new_guided_entry_path, class: 'button-sq' do %>
+      <i class="fas fa-map-signs"></i>
+      <!-- <i class="fas fa-compass"></i> -->
+    <% end %>
+    <%= link_to new_entry_path, class: 'button-sq' do %>
+      <i class="fas fa-plus-square"></i>
+    <% end %>
+    <%= link_to doodle_path, class: 'button-sq' do %>
+      <i class="fas fa-paint-brush"></i>
+    <% end %>
+    <%= link_to root_path, class: 'button-sq' do %>
+      <% if @mood == "1"%>
+      <i class="fas fa-meh emoji"></i>
+      <% elsif @mood == "2" %>
+        <i class="fas fa-smile emoji"></i>
+      <% elsif @mood == "3" %>
+        <i class="fas fa-angry emoji"></i>
+      <% elsif @mood == "4" %>
+        <i class="fas fa-frown emoji"></i>
+      <% elsif @mood == "5" %>
+        <i class="fas fa-sad-tear emoji"></i>
+      <% elsif @mood == "6" %>
+        <i class="fas fa-tired emoji"></i>
+      <% elsif @mood == '' %>
+        <i class="fas fa-meh-blank"></i>
+      <% end %>
+
+    <% end %>
+    <%= link_to communities_path, class: 'button-sq' do %>
+      <i class="fas fa-users"></i>
+    <% end %>
   </div>
 </div>
