--- a/app/views/communities/edit.html.erb
+++ b/app/views/communities/edit.html.erb
@@ -1,4 +1,4 @@
 <%= render "form", community: @community %>
-<%= link_to 'Go back', community_path(@community) %>
+<%= link_to 'Go back', communities_path %>
 <br>
 <%= link_to 'Go back to home page', root_path  %>
