make navbar work across all browser sizes

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,3 +4,9 @@ body {
   // background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dp6jmvq0j/image/upload/v1622124068/trees_vertical_bluoff.jpg);
   // background-color: $light-green;
 }
+
+.mood_container {
+  // display: flex;
+  margin: 0 auto;
+  width: 300px;
+}
