--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,6 +4,7 @@
   // padding-left: 20px;
   text-align: center;
   margin-right: 0;
+  min-width: 250px
   i {
     font-size: 20px; // icons on navbar
   }
