--- a/app/assets/stylesheets/pages/_menu.scss
+++ b/app/assets/stylesheets/pages/_menu.scss
@@ -12,6 +12,7 @@
   margin: 0 auto;
   // height: 80vh;
   width: 300px;
+  // max-width: 400px;
   gap: 24px;
   flex-wrap: wrap;
   justify-content: space-around;
