--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,5 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-cultivate">
+<!-- <div class="navbar navbar-expand-sm navbar-light navbar-cultivate"> -->
+<div class="navbar navbar-light navbar-cultivate">
 
   <%= link_to new_entry_path, class: "navbar-brand" do %>
     <i class="fas fa-plus-square" class="plus-icon"></i>
