--- a/app/assets/stylesheets/components/_emoji.scss
+++ b/app/assets/stylesheets/components/_emoji.scss
@@ -8,7 +8,9 @@
 }
 
 .emoji-entry {
-  font-size: 24px;
-  color: $dark-gray;
+  font-size: 32px;
+  color: $dark-green;
+  opacity: 0.5;
   margin-bottom: 8px;
+  padding-right: 0;
 }
