--- a/app/assets/stylesheets/components/_card_entry_show.scss
+++ b/app/assets/stylesheets/components/_card_entry_show.scss
@@ -1,6 +1,11 @@
+.container-entry {
+  width: 380px;
+  margin: 40px auto;
+}
+
 .card_entry_show {
   background-color: $light-gray;
-  width: 340px;
+  width: 100%;
   padding: 12px 16px;
   margin: 16px auto;
   // text-overflow: hidden;
@@ -8,4 +13,8 @@
   text-decoration: none;
   border-radius: 8px;
   color: $dark-gray;
+  small {
+      padding: 16px 8px;
+      font-size: 20px;
+    }
 }
