Edited the new community form css styling

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -34,8 +34,6 @@
   }
 }
 
-
-
 .button-sq {
   font-size: 52px;
   background-color: $dark-green;
@@ -59,6 +57,14 @@
   }
 }
 
+.btn-back {
+  border-radius: 8px;
+}
+
 .btn-community {
   width: 160px;
+}
+
+.btn-create-community {
+  width: 200px;
 }
