--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -16,4 +16,5 @@
 @import "overlay";
 @import "card_entry";
 @import "card_entry_show";
-@import "community_cards";
+@import "community_card";
+@import "community_form";
