--- a/app/views/communities/_community_request_fields.html.erb
+++ b/app/views/communities/_community_request_fields.html.erb
@@ -1,4 +1,6 @@
-<div class="nested-fields">
-    <%= f.input :user_id, collection: @non_owner_users %>
-    <%= link_to_remove_association "Remove Member", f %>
+<div class="nested-fields d-flex align-items-center justify-content-center w-100">
+    <%= f.input :user_id, collection: @non_owner_users, label: false %>
+    <%= link_to_remove_association f do %>
+      <i class="fas fa-times delete-user-icon"></i>
+    <% end %>
 </div>
