Added an h3 in communities index page

--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container community-cards-container">
+  <h3>My Communities</h3>
   <% @communities.each do |community| %>
     <div class="container community-card my-4">
       <%= link_to community_path(community) do %>
