--- a/app/assets/stylesheets/components/_community_card.scss
+++ b/app/assets/stylesheets/components/_community_card.scss
@@ -3,6 +3,15 @@
   border: 1px solid white;
   border-radius: 8px;
   width: 80%;
+  h3 {
+    margin: 8px auto;
+    width: 220px;
+    color: black;
+    border: 1px solid black;
+    background-color: rgba(250, 250, 250, 0.9);
+    padding: 8px;
+    border-radius: 8px;
+  }
 }
 
 .community-card {
