Changes to css styling after stand up discussion

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -59,6 +59,9 @@
 
 .btn-back {
   border-radius: 8px;
+  background-color: $light-gray;
+  color: $dark-gray;
+  border: none;
 }
 
 .btn-community {
