--- a/app/assets/stylesheets/components/_community_card.scss
+++ b/app/assets/stylesheets/components/_community_card.scss
@@ -1,45 +1,41 @@
 .community-cards-container {
-  background-color: rgba(250, 250, 250, 0.8);
-  border: 1px solid white;
-  border-radius: 8px;
   width: 80%;
-  h4 {
-    margin: 8px auto;
-    width: 200px;
-    color: black;
-    border: 1px solid black;
-    background-color: rgba(250, 250, 250, 0.9);
-    padding: 4px;
-    border-radius: 8px;
-  }
+}
+
+// .community-header {
+//   margin: 8px auto;
+//   width: 200px;
+//   color: black;
+//   border: 1px solid black;
+//   background-color: rgba(250, 250, 250, 0.9);
+//   padding: 4px;
+//   border-radius: 8px;
+// }
+
+.community-header {
+  margin: 8px auto;
+  width: 200px;
+  color: $light-gray;
 }
 
 .community-card {
-  width: 80%;
-  background-color: $light-green;
-  border: 1px solid rgba(0, 0, 0, 0.6);
-  border-radius: 8px;
-  a {
-    color: black;
-  }
-}
-
-.request-card {
-  width: 80%;
+  width: 100%;
   background-color: $light-gray;
-  border: 1px solid rgba(0, 140, 0, 0.6);
   border-radius: 8px;
-  color: black;
-}
-
-.requests .accept {
-  font-weight: bold;
-  color: darkgreen;
-}
-
-.requests .deny {
-  font-weight: bold;
-  color: $red;
+  h5 {
+    color: $dark-gray;
+  }
+  a {
+    color: $dark-gray;
+  }
+  .deny {
+    font-weight: bold;
+    color: $red;
+  }
+  .accept {
+    font-weight: bold;
+    color: darkgreen;
+  }
 }
 
 .owner-tag {
