--- a/app/assets/stylesheets/components/_community_form.scss
+++ b/app/assets/stylesheets/components/_community_form.scss
@@ -2,8 +2,7 @@
   width: 80%;
   margin: 0 auto;
   border-radius: 8px;
-  background-color: rgba(10, 10, 10, 0.8);
-  border: 1px solid rgba(250, 250, 250, 0.7);
+  background-color: rgba(0, 0, 0, 0.8);
   padding: 32px;
 }
 
@@ -11,6 +10,11 @@
   text-align: center;
   font-style: italic;
   font-size: 24px;
+  height: 40px !important;
+}
+
+.community-user-input {
+  height: 40px !important;
 }
 
 .add-user-icon {
