--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,7 +1,7 @@
+<h3 class="community-header">My Communities</h3>
 <div class="container community-cards-container">
-  <h4>My Communities</h4>
   <% @communities.each do |community| %>
-    <div class="container community-card my-4">
+    <div class="container community-card my-4 py-2">
       <%= link_to community_path(community) do %>
         <h5><%= community.name %></h5>
         <div class="community-members d-flex justify-content-center align-items-center">
@@ -15,7 +15,7 @@
     </div>
   <% end %>
   <% @requests.each do |request| %>
-    <div class="container request-card my-4">
+    <div class="container community-card my-4 py-2">
         <h5><%= request.community.name %></h5>
         <div class="requests d-flex justify-content-around align-items-center">
           <%= link_to 'Accept', decide_path(request: request, accept: true), class: "accept" %>
