--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,17 +1,15 @@
 .button-lg {
-  // width:170px;
   width:170px;
-  // height: 60px;
   background-color: $dark-green;
   padding: 16px 32px;
   color: $light-gray;
   border-radius: 4px;
   border: 3px solid $dark-green;
   transition: background-color .3s;
-  &:hover {
-    color: $light-gray;
-    text-decoration: none;
-  }
+  // &:hover {
+  //   color: $light-gray;
+  //   text-decoration: none;
+  // }
   &:active {
     color: $light-gray;
     text-decoration: none;
@@ -29,6 +27,21 @@
   border-radius: 8px;
   margin-top: 8px;
   margin-bottom: 8px;
+  &:hover {
+    color: $light-gray
+  }
+}
+
+.button-sm-gray {
+    // width: 110px;
+  // height: 55px;
+  background-color: $light-gray;
+  padding: 8px 16px;
+  color: $dark-gray;
+  border-radius: 8px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+
   &:hover {
     color: $light-gray
   }
