--- a/app/assets/stylesheets/components/_card_entry.scss
+++ b/app/assets/stylesheets/components/_card_entry.scss
@@ -1,5 +1,5 @@
 .container-entries {
-  width: 340px;
+  width: 320px;
   margin: 0 auto;
   h1 {
     margin-bottom: 24px;
@@ -48,6 +48,7 @@
 }
 
 .container-editor {
-  width: 380px;
+  // width: 340px;
+  width: 100%;
   margin: 16px auto;
 }
