--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -26,5 +26,10 @@
   border-radius: 4px;
   border: none;
   text-align: left;
-  background: $light-gray;
+  // background: $light-gray;
+}
+
+.form-inputs {
+  width: 80%;
+  margin: 0 auto;
 }
