--- a/app/assets/stylesheets/components/_card_entry.scss
+++ b/app/assets/stylesheets/components/_card_entry.scss
@@ -1,5 +1,6 @@
 .container-entries {
-  width: 320px;
+  width: 90vw;
+  max-width: 600px;
   margin: 0 auto;
   h1 {
     margin-bottom: 24px;
@@ -48,7 +49,8 @@
 }
 
 .container-editor {
-  // width: 340px;
-  width: 100%;
+  width: 90vw;
+  max-width: 600px;
+  // width: 100%;
   margin: 16px auto;
 }
