--- a/app/views/communities/_form.html.erb
+++ b/app/views/communities/_form.html.erb
@@ -12,5 +12,6 @@
   </div>
   <%= f.button :submit, class:'btn button-sm my-4 btn-create-community' %>
   <%= link_to 'Go back', communities_path, class: 'btn btn-primary btn-back' %>
+  <%= link_to 'Delete', community_path(@community), method: :delete, data: { confirm: 'Delete this community?' }, class: 'btn btn-primary btn-delete-community' %>
 <% end %>
 
