--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -25,7 +25,7 @@
   text-align: left;
   margin-bottom: 8px;
   padding: 8px;
-  border-bottom: 0.5px solid $dark-gray;
+  border-bottom: 0.5px solid darkgray;
   p {
     margin: 0;
   }
