--- a/app/assets/stylesheets/components/_doodle.scss
+++ b/app/assets/stylesheets/components/_doodle.scss
@@ -11,10 +11,26 @@
   height: 30px;
 }
 
+#doodle-controls{
+  display: flex;
+  justify-content: space-evenly;
+  align-content: center;
+}
+
 #doodle-options {
   display: flex;
+  justify-content: center;
   align-content: center;
   margin: 0 auto;
   width: 375px;
 }
 
+#colors-canvas {
+  height: 40px;
+  width: 40px;
+  align-self: center;
+}
+
+#width-canvas {
+  width: 100px;
+}
