tried to fix the color picker issue

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -41,10 +41,7 @@
   border-radius: 8px;
   margin-top: 8px;
   margin-bottom: 8px;
-
-  &:hover {
-    color: $light-gray
-  }
+  cursor: pointer;
 }
 
 
